# pyArcusLE

./: .gitignore  CMakeLists.txt  README.md  conandata.yml  conanfile.py
.github/workflows/: conan-package.yml  requirements-conan-package.txt  update-fork.yml
include/pyArcus/: PythonMessage.h
python/: Error.sip  PythonMessage.sip  SocketListener.sip  Types.sip  pyArcus.sip
src/: PythonMessage.cpp
test_package/: CMakeLists.txt  conanfile.py  test.py
